# glade

./: .clinerules  .cursorrules  .gitignore  ALPHA4_PLAN.md  ARCHITECTURE.md  BUG_BACKLOG.md  CONTRIBUTING.md  DEVELOPMENT.md  INTERCONNECTED_VAULTS_RESEARCH.md  LICENSE  LOCAL_FIRST_SYNC_RESEARCH.md  MANUAL.md  PRODUCT_VISION_DRAFT.md  README.md  ROADMAP.md  STRATEGIC_PLANNING.md  generate_vault.js  implementation-plan-alpha2.md  implementation_plan_alpha5.md  index.html  package-lock.json  package.json  parse_md.cjs  parse_test.mjs  patch.js  patch_lib.rs  patch_tool.rs  playwright.config.ts  scratch.rs  test-builder-widget.js  test-builder.js  test-builder.mjs  test-builder2.mjs  test-css.html  test-css2.html  test-matter.js  test-parse.js  test-refactor.js  test-script.cjs  test.js  (+18 more)
.tmp/: check.cjs
coverage/: coverage-final.json  index.html
e2e/: agent.spec.ts  agent_persona.spec.ts  chat.spec.ts  command-palette.spec.ts  ecosystem.spec.ts  editor.spec.ts  global-setup.ts  global-teardown.ts  headless.spec.ts  mock-server.ts  open_vault.spec.ts  scrolling.spec.ts  sdk.spec.ts  security_zones.spec.ts  selection.spec.ts  test-bold.spec.ts  test-caret.spec.ts  test-cursor.spec.ts  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_test.rs  lib.rs  server.rs
src-tauri/src/agent/: mcp_tool.rs  memory.rs  mod.rs  shadow_fs.rs  tests.rs  tools.rs
src-tauri/src/gemini/: mod.rs
src-tauri/src/mcp/: client.rs  manager.rs  mod.rs  types.rs
src-tauri/src/vector_db/: manager.rs  mod.rs
(+156 files in other folders)
